# Mock1

./: .gitignore  README.md
m1_code/src/m1_camera_pkg/: CMakeLists.txt  package.xml
m1_code/src/m1_camera_pkg/config/: camera_config.yaml
m1_code/src/m1_camera_pkg/include/m1_camera_pkg/: Camera.h
m1_code/src/m1_camera_pkg/launch/: camera_setup.launch
m1_code/src/m1_camera_pkg/src/: Camera.cpp  camera_feeds_node.cpp  camera_node.cpp
m1_code/src/m1_nav_pkg/: CMakeLists.txt  package.xml
m1_code/src/m1_nav_pkg/scripts/: motor_controller.py
setup/: .bash_aliases_m1  README.md
