<?xml version="1.0"?>
<package format="2">

  <name>m1_nav_pkg</name>
  <version>1.0.0</version>
  <description>The m1_nav_pkg is for robot navigation.</description>

  <maintainer email="jarendon10@gmail.com">Julian Rendon</maintainer>
  <maintainer email="Josephpeltroche@gmail.com">Joseph Peltroche</maintainer>
  <license>MIT</license>
  <author email="julianrendon514@gamil.com">Julian Rendon</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>

</package>
